recursion.lessons.recursion.koch.Koch.scala.error
Koch:26: error: not found: value snowside
		snowside(l=l-1,length)}
                ^